
\name{NEWS}
\encoding{UTF-8}
\title{News for Package \pkg{inum}}

\section{Changes in version 1.0-3 (2021-02-08)}{
\itemize{
  \item{Update reference output.}
  }
}


\section{Changes in version 1.0-2 (2021-02-03)}{
\itemize{
  \item{\code{complete.cases.only} returned nonsense.}
  }
}


\section{Changes in version 1.0-1 (2019-01-23)}{
\itemize{
  \item{Differences must be larger than \code{sqrt(.Machine$double.eps)}.}
  \item{Handle numeric vectors with only two distinct values.}
  }
}


\section{Changes in version 1.0-0 (2017-12-12)}{
\itemize{
  \item{Allow multiple variables in \code{as.interval}.}
  \item{When \code{nmax} is smaller than the number of
        unique values, optionally use the means of the observations
        in each bin as level (and not the corresponding quantiles
        as in earlier version) to minimise bias.}
  }
}

\section{Changes in version 0.9-2 (2017-02-27)}{
\itemize{
  \item{Introduce \code{is.na} methods.}
}
}

\section{Changes in version 0.9-1 (2017-02-01)}{
\itemize{
  \item{Make sure all NAs are coded as 0.}
}
}


\section{Changes in version 0.9-0 (2016-12-09)}{
\itemize{
  \item{ \pkg{inum} published on CRAN.}
}
}