@@ -1,7 +1,7 @@
 Package: inum
 Title: Interval and Enum-Type Representation of Vectors
-Date: 2021-02-08
-Version: 1.0-3
+Date: 2021-04-12
+Version: 1.0-4
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")
 Description: Enum-type representation of vectors and representation
@@ -10,8 +10,8 @@ Depends: R (>= 3.3.0)
 Imports: stats, libcoin (>= 1.0-0)
 License: GPL-2
 NeedsCompilation: no
-Packaged: 2021-02-08 11:44:36 UTC; hothorn
+Packaged: 2021-04-12 14:44:26 UTC; hothorn
 Author: Torsten Hothorn [aut, cre]
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2021-02-08 17:10:11 UTC
+Date/Publication: 2021-04-12 15:20:02 UTC
