@@ -1,14 +1,14 @@
-beaa4df4b7945addfcd21397f27d579d *DESCRIPTION
+106906ddbf9808b532dd78825d0ef9a2 *DESCRIPTION
 328d1e76276ad8a4019e5a1746cd5e6a *NAMESPACE
 7ceb471fb19e5b0645ecf0bf34222feb *R/enum.R
 dd22dd4311f59d57ffc0b7b6cc98b62b *R/interval.R
-a3c05993c5dfe5a9d0d702ece5434f11 *R/inum.R
+3e352aa371f0ec73a226fd857b8eb9b3 *R/inum.R
 339c2c619522533780dc2ab641fef27d *cleanup
-a1ba78221eec00ed8352c6833dbc5f5b *inst/NEWS.Rd
+1dfa5d9358a2c930bb113bd68a8fa42c *inst/NEWS.Rd
 26c4e331027b064acf4b32ab14b2acdd *man/enum.Rd
 060c4485f8a056cc3908272e5a3100c3 *man/interval.Rd
 be4783f35d143567f86120f7048ac0be *man/inum.Rd
-82e999b5c11b50283fe099d9fd4a316b *tests/bugfixes.R
-65e092888f1d2efcddc86dd612e2d37e *tests/bugfixes.Rout.save
+e41e5a6cd49867f22e14a607e92b788b *tests/bugfixes.R
+68a84e01e3ea79d20e380b4598062198 *tests/bugfixes.Rout.save
 0cee5abe8427209bc56357c87a9fb435 *tests/regtest.R
 d6cf7ab50a02d539bfa87877c0279742 *tests/regtest.Rout.save
